# ProyectosEmpotrados

./: README.md
SmartHome/HomeManager/: README.md  angular.json  package-lock.json  package.json
SmartHome/HomeManager/src/: index.html  styles.css
SmartHome/HomeManager/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  auth.guard.ts
SmartHome/HomeManager/src/app/Interfaces/: objeto.ts
SmartHome/HomeManager/src/app/Services/: conexion.service.ts  estado.service.ts  login.service.ts
SmartHome/HomeManager/src/app/casa/: casa.component.css  casa.component.html  casa.component.spec.ts  casa.component.ts
SmartHome/HomeManager/src/app/login/: login.component.css  login.component.html  login.component.ts
SmartHome/HomeManagerBackend/PinManager/: CMakeLists.txt  pin_manager.c  toolchain.cmake
SmartHome/HomeManagerBackend/PinManager/include/: camera_capture.h
SmartHome/HomeManagerBackend/PinManager/lib/: CMakeLists.txt  camera_capture.c  raspPinManager.c
SmartHome/raspPinMangerLib/: CMakeLists.txt  README.md  test.c
SmartHome/raspPinMangerLib/include/: raspPinManger.h
SmartHome/raspPinMangerLib/lib/: CMakeLists.txt  raspPinManager.c
SmartHome/rasp_server/: app.py  pin_manager
SmartHome/web_server/: app.py  credentials.txt  pin_manager
